# snapserve

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: python-publish.yml
examples/: calculator.py
pyserve/: client.py  dataclasses.py  loaders.py  server.py
pyserve/cli/: serve.py
pyserve/utils/: inspect.py  loaders.py
snapserve/: __init__.py  client.py  consts.py  dataclasses.py  global_variables.py  loaders.py  mutable.py  remote.py  server.py
snapserve/cli/: main.py  ps.py  serve.py  start.py  stop.py
snapserve/utils/: attribute.py  connections.py  inspect.py  loaders.py
