[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapserve"
version = "1.2.1"
description = "Turn your Python functions, classes, and objects into remote services instantly."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [
    {name = "Panuthep Tasawong", email = "panutheptasawong@gmail.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "tqdm"]

[project.urls]
Homepage = "https://github.com/panuthept/snapserve"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["snapserve*"]

[project.scripts]
snapserve = "snapserve.cli.main:app"